--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,5 @@
 {
-  "extends": [
-    "next/core-web-vitals"
-  ],
+  "extends": ["next/core-web-vitals"],
   "rules": {
     "prefer-const": "error",
     "no-var": "error",
@@ -9,10 +7,5 @@
     "eqeqeq": "error",
     "react/no-unescaped-entities": "off"
   },
-  "ignorePatterns": [
-    "node_modules/",
-    ".next/",
-    "out/",
-    "build/"
-  ]
+  "ignorePatterns": ["node_modules/", ".next/", "out/", "build/"]
 }
